resolving more findbug issues